# compile-pdf-impose

./: .coderabbit.yaml  .cursorrules  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  security.yml
src/compile_pdf_impose/: __init__.py  api.py  cli.py  engine.py  layout_schema.py  verify.py
tests/: test_impose_api.py  test_impose_cli.py  test_impose_determinism.py  test_impose_engine.py  test_impose_layout_schema.py  test_impose_plumb_fields.py  test_impose_surface.py  test_impose_verify.py
